Arregle el problema del reporte de asesores
Arregle el problema del reporte de asesores

--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -34,8 +34,9 @@
                 <binding name="PlantillasCSVcargaWSPortBinding" />
                 <binding name="GestionHumanaWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="ReporteAsesorOpinionWSPortBinding" />
-                <binding name="ReporteEventoAlumnoWSPortBinding" />
+				<binding name="ReporteAsesorOpinionWSPortBinding" receiveTimeout="00:01:00"
+				sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+				<binding name="ReporteEventoAlumnoWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
