--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ ProyectosJAVA/ooiaGestHumanaController/build/built-jar.properties
 !/ProyectosJAVA/AuxiliarWS/src/java/lib/jasperreports-chart-customizers-6.16.0.jar
 !/ProyectosJAVA/AuxiliarWS/src/java/lib/javax.servlet-3.0.jar
 
+/ProyectosJAVA/AuxiliarWS/build/
