--- a/ProyectosJAVA/ooiaGestHumanaController/nbproject/private/private.properties
+++ b/ProyectosJAVA/ooiaGestHumanaController/nbproject/private/private.properties
@@ -6,4 +6,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Gerardo\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
