--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -31,11 +31,14 @@
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="PsicologosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PlantillasCSVcargaWSPortBinding" />
+                <binding name="PlantillasCSVcargaWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
                 <binding name="GestionHumanaWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="ReporteAsesorOpinionWSPortBinding" />
-                <binding name="ReporteEventoAlumnoWSPortBinding" />
+                <binding name="ReporteAsesorOpinionWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+                <binding name="ReporteEventoAlumnoWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -58,9 +61,6 @@
             <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PsicologosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="PsicologosCSVcargaWSPortBinding"
                 contract="CargarCSVpsicologosWS.PsicologosCSVcargaWS" name="PsicologosCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/GestionAtencionWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
-                contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
             <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PlantillasCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="PlantillasCSVcargaWSPortBinding"
                 contract="ObtenerPlantillaCSVcargaWS.PlantillasCSVcargaWS"
@@ -69,21 +69,24 @@
                 binding="basicHttpBinding" bindingConfiguration="CursosLlevadosCSVcargaWSPortBinding"
                 contract="CargarCSVcursosLlevadosWS.CursosLlevadosCSVcargaWS"
                 name="CursosLlevadosCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/ReporteEventoAlumnoWS"
-                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
-                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
             <endpoint address="http://54.157.187.65:8080/AuxiliarWS/AlumnosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="AlumnosCSVcargaWS1PortBinding"
                 contract="CargarCSValumnosWS.AlumnosCSVcargaWS1" name="AlumnosCSVcargaWS1Port" />
-            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteAsesorOpinionWS"
-                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
-                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
             <endpoint address="http://localhost:8082/AuxiliarWS/GestionHumanaWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
                 contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
             <endpoint address="http://localhost:8082/AuxiliarWS/GestionEventoWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
                 contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
+            <endpoint address="http://localhost:8082/AuxiliarWS/GestionAtencionWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
+                contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
+            <endpoint address="http://localhost:8082/AuxiliarWS/ReporteEventoAlumnoWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
+                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
+            <endpoint address="http://localhost:8082/AuxiliarWS/ReporteAsesorOpinionWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
+                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
