--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -17,28 +17,22 @@
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="CodigoAtencionWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
-                <binding name="CursosLlevadosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="ProfesoresCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="GestionEventoWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="GestionAtencionWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="AlumnosCSVcargaWS1PortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="EvaluacionesCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PsicologosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PlantillasCSVcargaWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
                 <binding name="GestionHumanaWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="ReporteAsesorOpinionWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="ReporteEventoAlumnoWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+                <binding name="AlumnosCSVcargaWS1PortBinding" />
+                <binding name="CursosLlevadosCSVcargaWSPortBinding" />
+                <binding name="EvaluacionesCSVcargaWSPortBinding" />
+                <binding name="ProfesoresCSVcargaWSPortBinding" />
+                <binding name="PsicologosCSVcargaWSPortBinding" />
+                <binding name="PlantillasCSVcargaWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -51,42 +45,42 @@
             <endpoint address="http://localhost:8080/WebServicesOOIA/CodigoWS"
                 binding="basicHttpBinding" bindingConfiguration="CodigoAtencionWSPortBinding"
                 contract="CodigoWS.CodigoAtencionWS" name="CodigoAtencionWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/EvaluacionesCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="EvaluacionesCSVcargaWSPortBinding"
-                contract="CargarCSVevaluacionesWS.EvaluacionesCSVcargaWS"
-                name="EvaluacionesCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/ProfesoresCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="ProfesoresCSVcargaWSPortBinding"
-                contract="CargarCSVprofesoresWS.ProfesoresCSVcargaWS" name="ProfesoresCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PsicologosCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="PsicologosCSVcargaWSPortBinding"
-                contract="CargarCSVpsicologosWS.PsicologosCSVcargaWS" name="PsicologosCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PlantillasCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="PlantillasCSVcargaWSPortBinding"
-                contract="ObtenerPlantillaCSVcargaWS.PlantillasCSVcargaWS"
-                name="PlantillasCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/CursosLlevadosCSVcargaWS"
+            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteAsesorOpinionWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
+                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/GestionAtencionWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
+                contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/GestionEventoWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
+                contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/GestionHumanaWS"
+                binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
+                contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/ReporteEventoAlumnoWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
+                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/AlumnosCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="AlumnosCSVcargaWS1PortBinding"
+                contract="CargarCSValumnosWS.AlumnosCSVcargaWS1" name="AlumnosCSVcargaWS1Port" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/CursosLlevadosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="CursosLlevadosCSVcargaWSPortBinding"
                 contract="CargarCSVcursosLlevadosWS.CursosLlevadosCSVcargaWS"
                 name="CursosLlevadosCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/AlumnosCSVcargaWS"
-                binding="basicHttpBinding" bindingConfiguration="AlumnosCSVcargaWS1PortBinding"
-                contract="CargarCSValumnosWS.AlumnosCSVcargaWS1" name="AlumnosCSVcargaWS1Port" />
-            <endpoint address="http://localhost:8082/AuxiliarWS/GestionHumanaWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionHumanaWSPortBinding"
-                contract="GestionHumanaWS.GestionHumanaWS" name="GestionHumanaWSPort" />
-            <endpoint address="http://localhost:8082/AuxiliarWS/GestionEventoWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
-                contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
-            <endpoint address="http://localhost:8082/AuxiliarWS/GestionAtencionWS"
-                binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
-                contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
-            <endpoint address="http://localhost:8082/AuxiliarWS/ReporteEventoAlumnoWS"
-                binding="basicHttpBinding" bindingConfiguration="ReporteEventoAlumnoWSPortBinding"
-                contract="ReporteEventoAlumnoWS.ReporteEventoAlumnoWS" name="ReporteEventoAlumnoWSPort" />
-            <endpoint address="http://localhost:8082/AuxiliarWS/ReporteAsesorOpinionWS"
-                binding="basicHttpBinding" bindingConfiguration="ReporteAsesorOpinionWSPortBinding"
-                contract="GenerarReporteAsesorWS.ReporteAsesorOpinionWS" name="ReporteAsesorOpinionWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/EvaluacionesCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="EvaluacionesCSVcargaWSPortBinding"
+                contract="CargarCSVevaluacionesWS.EvaluacionesCSVcargaWS"
+                name="EvaluacionesCSVcargaWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/ProfesoresCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="ProfesoresCSVcargaWSPortBinding"
+                contract="CargarCSVprofesoresWS.ProfesoresCSVcargaWS" name="ProfesoresCSVcargaWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/PsicologosCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="PsicologosCSVcargaWSPortBinding"
+                contract="CargarCSVpsicologosWS.PsicologosCSVcargaWS" name="PsicologosCSVcargaWSPort" />
+            <endpoint address="http://localhost:8080/AuxiliarWS/PlantillasCSVcargaWS"
+                binding="basicHttpBinding" bindingConfiguration="PlantillasCSVcargaWSPortBinding"
+                contract="ObtenerPlantillaCSVcargaWS.PlantillasCSVcargaWS"
+                name="PlantillasCSVcargaWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
