Validar registro de cita

--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -59,7 +59,7 @@
             <endpoint address="http://54.157.187.65:8080/AuxiliarWS/PsicologosCSVcargaWS"
                 binding="basicHttpBinding" bindingConfiguration="PsicologosCSVcargaWSPortBinding"
                 contract="CargarCSVpsicologosWS.PsicologosCSVcargaWS" name="PsicologosCSVcargaWSPort" />
-            <endpoint address="http://54.157.187.65:8080/AuxiliarWS/GestionAtencionWS"
+            <endpoint address="http://localhost:8080/AuxiliarWS/GestionAtencionWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionAtencionWSPortBinding"
                 contract="GestionAtencionWS.GestionAtencionWS" name="GestionAtencionWSPort" />
             <endpoint address="http://54.157.187.65:8080/AuxiliarWS/GestionEventoWS"
