--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/ProyectoOOIA.csproj
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/ProyectoOOIA.csproj
@@ -1270,6 +1270,8 @@
     </None>
     <None Include="Resources\btnNuevo.Image.png" />
     <None Include="Resources\btnGuardar.Image.png" />
+    <None Include="Resources\02-abre-50-anos_nuevo.jpg" />
+    <None Include="Resources\asesores.png" />
     <Content Include="Resources\Bunifu_UI_v1.5.dll" />
     <None Include="Resources\menos.png" />
     <None Include="Resources\mas.png" />
@@ -1278,6 +1280,7 @@
     <None Include="Resources\edit_black1.png" />
     <None Include="Resources\Cancel_16x.png" />
     <None Include="Resources\Eraser_16x.png" />
+    <None Include="Resources\eeggcc2.jpg" />
     <Content Include="Resources\profesor.jpg" />
     <None Include="Resources\Profile.bmp" />
     <Content Include="Resources\psicologo.jpg" />
