--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -25,13 +25,20 @@
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="ReporteEventoAlumnoWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="CursosLlevadosCSVcargaWSPortBinding" />
-                <binding name="EvaluacionesCSVcargaWSPortBinding" />
-                <binding name="AlumnosCSVcargaWS1PortBinding" />
-                <binding name="ProfesoresCSVcargaWSPortBinding" />
-                <binding name="PsicologosCSVcargaWSPortBinding" />
-                <binding name="ReporteAsesorOpinionWSPortBinding" />
-                <binding name="PlantillasCSVcargaWSPortBinding" />
+                <binding name="CursosLlevadosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                <binding name="EvaluacionesCSVcargaWSPortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                <binding name="AlumnosCSVcargaWS1PortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                <binding name="ProfesoresCSVcargaWSPortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                <binding name="PsicologosCSVcargaWSPortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                <binding name="ReporteAsesorOpinionWSPortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
+                <binding name="PlantillasCSVcargaWSPortBinding" receiveTimeout="00:01:00"
+                         sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
             </basicHttpBinding>
         </bindings>
         <client>
